fix(Menu): add overflow

--- a/src/components/Menu/style.css
+++ b/src/components/Menu/style.css
@@ -5,6 +5,7 @@
   bottom: 0;
   box-shadow: var(--e-box-shadow-1);
   box-sizing: border-box;
+  overflow: auto;
   padding: var(--e-space-3);
   position: fixed;
   right: 0;
